api-gateway/kustomize/api-gateway/overlays/local/oathkeeper/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  tls:
  - hosts:
      - gateway.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: gateway.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: PROXY_SERVICE_NAME
            port:
              name: http
